Remove khan from Name

--- a/notes.html
+++ b/notes.html
@@ -250,7 +250,7 @@
     </section>
 
     <footer>
-      <p>Created by [Arman ihsan khan].</p>
+      <p>Created by [Arman ihsan].</p>
     </footer>
   </body>
 </html>
